--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
 name = "build_async"
 authors = ["Igor Y. Khomyakov <ikh@ikhsoftware.com>", "Dmitriy Kumshayev <dq@mail.com>"]
-version = "0.1.2"
+version = "0.1.3"
 edition = "2021"
 #homepage = "https://www.ikhsoftware.com/build_async"
 keywords = ["async", "await"]
 categories = ["asynchronous", "concurrency", "no-std"]
 description = "Rust Macros to Unify Synchronous and Asynchronous Codebases"
 #documentation = "https://docs.rs/build_async"
-license = "GPL-3.0"
+license = "LGPL-3.0-or-later"
 readme = "README.md"
 repository = "https://github.com/ikhomyakov/build_async"
 rust-version = "1.79"
